--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/component_snippets.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/component_snippets.sdf.jinja
@@ -1,4 +1,7 @@
-<?xml version="1.0"?>
+<?xml version="1.0"? encoding="utf-8">
+<sdf version="1.6">
+
+{% import "components_base.sdf.jinja" as components_base %}
 
 <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 <!-- !!    THIS DOCUMENT CONTAINS ONLY COMMON COMPONENTS MACRO AND    !! -->
@@ -707,28 +710,29 @@ limitations under the License.
   <!--  {-->
 
 <!-- Macro to add the mavlink_interface_plugin{-->
-{%- macro mavlink_interface_macro(mavlink_addr, mavlink_udp_port, mavlink_tcp_port, serial_enabled, serial_device, baudrate, qgc_addr, qgc_udp_port, sdk_addr, sdk_udp_port, hil_mode, hil_state_level, send_vision_estimation, send_odometry, enable_lockstep, use_tcp) -%}
+{%- macro mavlink_interface_macro(mavlink_config) -%}
+
 <plugin name="mavlink_interface_plugin" filename="libgazebo_mavlink_interface.so">
   <robotNamespace/>
   <imuSubTopic>/imu</imuSubTopic>
   <magSubTopic>/mag</magSubTopic>
   <baroSubTopic>/baro</baroSubTopic>
-  <mavlink_addr>{{ mavlink_addr }}</mavlink_addr>
-  <mavlink_udp_port>{{ mavlink_udp_port }}</mavlink_udp_port>
-  <mavlink_tcp_port>{{ mavlink_tcp_port }}</mavlink_tcp_port>
-  <serialEnabled>{{ serial_enabled }}</serialEnabled>
-  <serialDevice>{{ serial_device }}</serialDevice>
-  <baudRate>{{ baudrate }}</baudRate>
-  <qgc_addr>{{ qgc_addr }}</qgc_addr>
-  <qgc_udp_port>{{ qgc_udp_port }}</qgc_udp_port>
-  <sdk_addr>{{ sdk_addr }}</sdk_addr>
-  <sdk_udp_port>{{ sdk_udp_port }}</sdk_udp_port>
-  <hil_mode>{{ hil_mode }}</hil_mode>
-  <hil_state_level>{{ hil_state_level }}</hil_state_level>
-  <send_vision_estimation>{{ send_vision_estimation }}</send_vision_estimation>
-  <send_odometry>{{ send_odometry }}</send_odometry>
-  <enable_lockstep>{{ enable_lockstep }}</enable_lockstep>
-  <use_tcp>{{ use_tcp }}</use_tcp>
+  <mavlink_addr>INADDR_ANY</mavlink_addr>
+  <mavlink_udp_port>{{ mavlink_config['mavlink_udp_port'] }}</mavlink_udp_port>
+  <mavlink_tcp_port>{{ mavlink_config['mavlink_tcp_port'] }}</mavlink_tcp_port>
+  <serialEnabled>0</serialEnabled>
+  <serialDevice>/dev/ttyACM0</serialDevice>
+  <baudRate>921600</baudRate>
+  <qgc_addr>INADDR_ANY</qgc_addr>
+  <qgc_udp_port>{{ mavlink_config['qgc_udp_port'] }}</qgc_udp_port>
+  <sdk_addr>INADDR_ANY</sdk_addr>
+  <sdk_udp_port>{{ mavlink_config['sdk_udp_port'] }}</sdk_udp_port>
+  <hil_mode>0</hil_mode>
+  <hil_state_level>0</hil_state_level>
+  <send_vision_estimation>{{ mavlink_config['send_vision_estimation'] }}</send_vision_estimation>
+  <send_odometry>{{ mavlink_config['send_odometry'] }}</send_odometry>
+  <enable_lockstep>{{ mavlink_config['enable_lockstep'] }}</enable_lockstep>
+  <use_tcp>{{ mavlink_config['use_tcp'] }}</use_tcp>
   <motorSpeedCommandPubTopic>/gazebo/command/motor_speed</motorSpeedCommandPubTopic>
   <control_channels>
     <channel name="rotor1">
@@ -3407,3 +3411,5 @@ limitations under the License.
 {%- endmacro -%}
 <!--}-->
 <!--}-->
+
+</sdf>
