--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/m690.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/m690.sdf.jinja
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <sdf version='1.6'>
 
-  {%- import "models/mrs_robots_description/sdf/component_snippets.sdf.jinja" as components -%}
+  {%- import "component_snippets.sdf.jinja" as components -%}
 
   {# ================================================================== #}
   {# ||                    parameters definition                     || #}
