--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/x500.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/x500.sdf.jinja
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <sdf version='1.6'>
 
-  {%- import "models/mrs_robots_description/sdf/component_snippets.sdf.jinja" as components -%}
+  {%- import "component_snippets.sdf.jinja" as components -%}
 
   {# ================================================================== #}
   {# ||                    parameters definition                     || #}
@@ -143,7 +143,7 @@
         z = 0,
         roll = 0,
         pitch = 0,
-        yaw = components.rad(90))
+        yaw = math.radians(90))
       }}
 
       {{ components.visual_mesh_textured_macro(
@@ -155,7 +155,7 @@
         z = 0,
         roll = 0,
         pitch = 0,
-        yaw = components.rad(90))
+        yaw = math.radians(90))
       }}
       <!--}-->
 
@@ -314,7 +314,7 @@
         z = 0,
         roll = 0,
         pitch = 0,
-        yaw = components.rad(90))
+        yaw = math.radians(90))
       }}
       {{ components.visual_mesh_macro(
         name = "nuc_cooler",
@@ -326,7 +326,7 @@
         z = 0,
         roll = 0,
         pitch = 0,
-        yaw = components.rad(90))
+        yaw = math.radians(90))
       }}
       {{ components.visual_mesh_macro(
         name = "nuc_hex_posts",
@@ -338,7 +338,7 @@
         z = 0,
         roll = 0,
         pitch = 0,
-        yaw = components.rad(90))
+        yaw = math.radians(90))
       }}
       <!--}-->
 
@@ -354,7 +354,7 @@
         z = 0,
         roll = 0,
         pitch = 0,
-        yaw = components.rad(90))
+        yaw = math.radians(90))
       }}
       <!--}-->
 
@@ -414,7 +414,7 @@
         z = 0.001,
         roll = 0,
         pitch = 0,
-        yaw = components.rad(90))
+        yaw = math.radians(90))
       }}
       {{ components.visual_mesh_macro(
         name = "battery",
@@ -426,7 +426,7 @@
         z = 0.001,
         roll = 0,
         pitch = 0,
-        yaw = components.rad(90))
+        yaw = math.radians(90))
       }}
       <!--}-->
       {% endif %}
@@ -443,7 +443,7 @@
         z = 0,
         roll = 0,
         pitch = 0,
-        yaw = components.rad(90))
+        yaw = math.radians(90))
       }}
       <!--}-->
       {% else %}
@@ -458,7 +458,7 @@
         z = 0,
         roll = 0,
         pitch = 0,
-        yaw = components.rad(90))
+        yaw = math.radians(90))
       }}
       {{ components.visual_mesh_macro(
         name = "gps_module",
@@ -470,7 +470,7 @@
         z = 0,
         roll = 0,
         pitch = 0,
-        yaw = components.rad(90))
+        yaw = math.radians(90))
       }}
       <!--}-->
       {% endif %}
@@ -487,7 +487,7 @@
         z = 0.001,
         roll = 0,
         pitch = 0,
-        yaw = components.rad(90))
+        yaw = math.radians(90))
       }}
       <!--}-->
       {% endif %}
@@ -504,7 +504,7 @@
         z = 0,
         roll = 0,
         pitch = 0,
-        yaw = components.rad(90))
+        yaw = math.radians(90))
       }}
       <!--}-->
       {% endif %}
@@ -521,7 +521,7 @@
         z = 0,
         roll = 0,
         pitch = 0,
-        yaw = components.rad(90))
+        yaw = math.radians(90))
       }}
       <!--}-->
       {% endif %}
@@ -708,24 +708,7 @@
     <!-- ================================================================== -->
 
     <!-- Mavlink interface {-->
-    {{ components.mavlink_interface_macro(
-      mavlink_addr = mavlink_addr,
-      mavlink_udp_port = mavlink_udp_port,
-      mavlink_tcp_port = mavlink_tcp_port,
-      serial_enabled = serial_enabled,
-      serial_device = serial_device,
-      baudrate = serial_baudrate,
-      qgc_addr = qgc_addr,
-      qgc_udp_port = qgc_udp_port,
-      sdk_addr = sdk_addr,
-      sdk_udp_port =sdk_udp_port,
-      hil_mode = hil_mode,
-      hil_state_level = hil_state_level,
-      send_vision_estimation = send_vision_estimation,
-      send_odometry = send_odometry,
-      enable_lockstep = use_lockstep,
-      use_tcp = use_tcp)
-    }}
+    {{ components.mavlink_interface_macro(spawner_args['mavlink_config']) }}
     <!--}-->
 
     <!-- GPS {-->
@@ -827,7 +810,7 @@
     {# Garmin {--> #}
     {% if enable_rangefinder %}
     <!-- Garmin {-->
-    {# {{ components.garmin_macro("lidar0", root, -0.077, 0, -0.069, 0, components.rad(90), 0) }} - uncomment when simulation will work with pixgarm #}
+    {# {{ components.garmin_macro("lidar0", root, -0.077, 0, -0.069, 0, math.radians(90), 0) }} - uncomment when simulation will work with pixgarm #}
     {{ components.external_garmin_macro(
       namespace = namespace,
       parent_link = root,
@@ -836,8 +819,8 @@
       y = 0.0625,
       z = -0.022,
       roll = 0,
-      pitch = components.rad(90),
-      yaw = components.rad(-90))
+      pitch = math.radians(90),
+      yaw = math.radians(-90))
     }}
     <!--}-->
     {% endif %}
@@ -921,7 +904,7 @@
       y = 0,
       z = 0.03,
       roll = 0,
-      pitch = - components.rad90,
+      pitch = - math.radians(90),
       yaw = 0)
     }}
     <!--}-->
@@ -939,7 +922,7 @@
       y = 0,
       z = 0.002,
       roll = 0,
-      pitch = components.rad90,
+      pitch = math.radians(90),
       yaw = 0)
     }}
     <!--}-->
@@ -962,8 +945,8 @@
       y = -0.0515,
       z = -0.038,
       roll = 0,
-      pitch = components.rad90,
-      yaw = components.rad180)
+      pitch = math.radians(90),
+      yaw = math.radians(180))
     }}
     <!--}-->
     {% endif %}
@@ -981,7 +964,7 @@
       y = -0.0515,
       z = -0.038,
       roll = 0,
-      pitch = components.rad90,
+      pitch = math.radians(90),
       yaw = 0)
     }}
     <!--}-->
@@ -1004,7 +987,7 @@
       z = 0.089,
       roll = 0,
       pitch = 0,
-      yaw = components.rad70)
+      yaw = math.radians(70))
     }}
 
     {{ components.uvcam_macro(
@@ -1019,7 +1002,7 @@
       z = 0.089,
       roll = 0,
       pitch = 0,
-      yaw = -components.rad70)
+      yaw = -math.radians(70))
     }}
     <!--}-->
     {% endif %}
@@ -1038,9 +1021,9 @@
       x = -0.1,
       y = 0.0,
       z = 0.085,
-      roll = components.rad90,
+      roll = math.radians(90),
       pitch = 0,
-      yaw = components.rad180)
+      yaw = math.radians(180))
     }}
     <!--}-->
     {% endif %}
@@ -1069,14 +1052,14 @@
     {% endif %}
 
     {# -- leds configuration -- (id, signal_id, x, y, z, roll, pitch, yaw) #}
-    {%- set uv_leds_macro_parameters = [(1, led1,  0.2017755,  0.1947045, 0.025, 0.0, components.rad90,  0.0),
-                                        (2, led1,  0.1947045,  0.2017755, 0.025, 0.0, components.rad90,  components.rad90),
-                                        (3, led2,  0.1947045, -0.2017755, 0.025, 0.0, components.rad90, -components.rad90),
-                                        (4, led2,  0.2017755, -0.1947045, 0.025, 0.0, components.rad90,  0.0),
-                                        (5, led3, -0.1947045,  0.2017755, 0.025, 0.0, components.rad90,  components.rad90),
-                                        (6, led3, -0.2017755,  0.1947045, 0.025, 0.0, components.rad90,  components.rad180),
-                                        (7, led4, -0.2017755, -0.1947045, 0.025, 0.0, components.rad90, -components.rad180),
-                                        (8, led4, -0.1947045, -0.2017755, 0.025, 0.0, components.rad90, -components.rad90)] -%}
+    {%- set uv_leds_macro_parameters = [(1, led1,  0.2017755,  0.1947045, 0.025, 0.0, math.radians(90),  0.0),
+                                        (2, led1,  0.1947045,  0.2017755, 0.025, 0.0, math.radians(90),  math.radians(90)),
+                                        (3, led2,  0.1947045, -0.2017755, 0.025, 0.0, math.radians(90), -math.radians(90)),
+                                        (4, led2,  0.2017755, -0.1947045, 0.025, 0.0, math.radians(90),  0.0),
+                                        (5, led3, -0.1947045,  0.2017755, 0.025, 0.0, math.radians(90),  math.radians(90)),
+                                        (6, led3, -0.2017755,  0.1947045, 0.025, 0.0, math.radians(90),  math.radians(180)),
+                                        (7, led4, -0.2017755, -0.1947045, 0.025, 0.0, math.radians(90), -math.radians(180)),
+                                        (8, led4, -0.1947045, -0.2017755, 0.025, 0.0, math.radians(90), -math.radians(90))] -%}
 
     {% for id_, signal_id_, x_, y_, z_, roll_, pitch_, yaw_ in uv_leds_macro_parameters %}
       {{ components.uvled_macro(
@@ -1099,10 +1082,10 @@
     {% if enable_uv_leds_beacon %}
     <!-- UV led beacon {-->
     {# -- leds configuration -- (id, signal_id, x, y, z, roll, pitch, yaw) #}
-    {%- set uv_leds_macro_parameters = [("b1", uvled_beacon_s,  0.01, 0.0,  0.125, 0.0, components.rad90, 0.0),
-                                        ("b2", uvled_beacon_s,  0.0,  0.01, 0.125, 0.0, components.rad90, components.rad90),
-                                        ("b3", uvled_beacon_s, -0.01, 0.0,  0.125, 0.0, components.rad90, components.rad180),
-                                        ("b4", uvled_beacon_s,  0.0, -0.01, 0.125, 0.0, components.rad90, components.rad270)] -%}
+    {%- set uv_leds_macro_parameters = [("b1", uvled_beacon_s,  0.01, 0.0,  0.125, 0.0, math.radians(90), 0.0),
+                                        ("b2", uvled_beacon_s,  0.0,  0.01, 0.125, 0.0, math.radians(90), math.radians(90)),
+                                        ("b3", uvled_beacon_s, -0.01, 0.0,  0.125, 0.0, math.radians(90), math.radians(180)),
+                                        ("b4", uvled_beacon_s,  0.0, -0.01, 0.125, 0.0, math.radians(90), math.radians(270))] -%}
 
     {% for id_, signal_id_, x_, y_, z_, roll_, pitch_, yaw_ in uv_leds_macro_parameters %}
       {{ components.uvled_macro(
